// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Script Link should render correctly 1`] = `
.emotion-0 {
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 0.9375rem;
  line-height: 1;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: 2.25rem;
  width: 2.125rem;
  border: 0.0625rem solid #FFFFFF;
  text-align: center;
  white-space: nowrap;
}

.emotion-0:focus::after,
.emotion-0:hover::after {
  content: "";
  position: absolute;
  inset: 0;
  box-sizing: border-box;
  border: 0.25rem solid #FFFFFF;
  pointer-events: none;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  height: 100%;
  padding-inline: 0.375rem;
  line-height: 1;
}

<div>
  <a
    class="focusIndicatorRemove emotion-0"
    data-variant="cyr"
    href="/serbian/cyr"
  >
    <span
      class="emotion-1"
    >
      Ћир
    </span>
  </a>
</div>
`;

exports[`Script Link should render correctly for new navigation 1`] = `
.emotion-0 {
  font-family: Helvetica,Arial,STHeiti,华文黑体,"Microsoft YaHei",微软雅黑,SimSun,宋体;
  font-style: normal;
  font-weight: 400;
  font-size: 0.9375rem;
  line-height: 1;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: 2.25rem;
  width: 2.125rem;
  border: 0.0625rem solid #FFFFFF;
  text-align: center;
  white-space: nowrap;
}

.emotion-0:focus::after,
.emotion-0:hover::after {
  content: "";
  position: absolute;
  inset: 0;
  box-sizing: border-box;
  border: 0.25rem solid #FFFFFF;
  pointer-events: none;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  height: 100%;
  padding-inline: 0.375rem;
  line-height: 1;
}

<div>
  <a
    class="focusIndicatorRemove emotion-0"
    data-variant="simp"
    href="/ukchina/simp/articles/c0e8weny66ko"
  >
    <span
      class="emotion-1"
    >
      简
    </span>
  </a>
</div>
`;
